@@ -1,9 +1,11 @@
 package ru.kpfu.itis.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.kpfu.itis.dto.ItemDto;
 import ru.kpfu.itis.model.InventoryEntity;
 import ru.kpfu.itis.model.InventoryReservation;
 import ru.kpfu.itis.model.Outbox;
@@ -11,6 +13,7 @@ import ru.kpfu.itis.repository.InventoryRepository;
 import ru.kpfu.itis.repository.InventoryReservationRepository;
 import ru.kpfu.itis.repository.OutboxRepository;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -26,30 +29,20 @@ public class InventoryService {
 
     @Transactional
     public void handleOrderCreated(UUID sagaId, String itemsJson) {
-
         try {
-            List<Map<String, Object>> items =
-                    objectMapper.readValue(itemsJson, List.class);
+            List<ItemDto> items = objectMapper.readValue(itemsJson, new TypeReference<List<ItemDto>>() {});
 
-            for (Map<String, Object> item : items) {
+            List<InventoryReservation> tempReservations = new ArrayList<>();
+            boolean allReserved = true;
 
-                String name = String.valueOf(item.get("name"));
-                int qty = Integer.parseInt(String.valueOf(item.get("quantity")));
+            for (ItemDto item : items) {
+                String name = item.name();
+                int qty = item.quantity();
 
                 int updated = inventoryRepository.reserveAtomically(name, qty);
-
                 if (updated == 0) {
-
-                    Outbox fail = Outbox.builder()
-                            .sagaId(sagaId)
-                            .topic("inventory.failed")
-                            .payload("""
-                                {"sagaId":"%s"}
-                                """.formatted(sagaId))
-                            .build();
-
-                    outboxRepository.save(fail);
-                    return;
+                    allReserved = false;
+                    break;
                 }
 
                 InventoryReservation reservation = InventoryReservation.builder()
@@ -57,30 +50,38 @@ public class InventoryService {
                         .itemName(name)
                         .quantity(qty)
                         .build();
-
                 reservationRepository.save(reservation);
+                tempReservations.add(reservation);
+            }
+
+            if (!allReserved) {
+                for (InventoryReservation res : tempReservations) {
+                    inventoryRepository.reserveAtomically(res.getItemName(), -res.getQuantity());  // Add back
+                    reservationRepository.delete(res);
+                }
+
+                Outbox fail = Outbox.builder()
+                        .sagaId(sagaId)
+                        .topic("inventory.failed")
+                        .payload(String.format("{\"sagaId\":\"%s\"}", sagaId))
+                        .build();
+                outboxRepository.save(fail);
+                return;
             }
 
             Outbox success = Outbox.builder()
                     .sagaId(sagaId)
                     .topic("inventory.reserved")
-                    .payload("""
-                        {"sagaId":"%s"}
-                        """.formatted(sagaId))
+                    .payload(String.format("{\"sagaId\":\"%s\"}", sagaId))
                     .build();
-
             outboxRepository.save(success);
 
         } catch (Exception e) {
-
             Outbox fail = Outbox.builder()
                     .sagaId(sagaId)
                     .topic("inventory.failed")
-                    .payload("""
-                        {"sagaId":"%s"}
-                        """.formatted(sagaId))
+                    .payload(String.format("{\"sagaId\":\"%s\"}", sagaId))
                     .build();
-
             outboxRepository.save(fail);
         }
     }
@@ -97,7 +98,7 @@ public class InventoryService {
         Outbox complete = Outbox.builder()
                 .sagaId(sagaId)
                 .topic("inventory.completed")
-                .payload("{\"sagaId\":%d}".formatted(sagaId))
+                .payload("{\"sagaId\":%s}".formatted(sagaId))
                 .build();
 
         outboxRepository.save(complete);
@@ -128,7 +129,6 @@ public class InventoryService {
                     continue;
                 }
 
-                // Удаляем резерв
                 reservationRepository.delete(res);
             }
 
